--- a/assets/css/chat-bot.css
+++ b/assets/css/chat-bot.css
@@ -16,21 +16,22 @@
 }
 
 a.blantershow-chat {
-    /*   background: #009688; */
-    background: #009688;
-    background: #fff;
-    color: #404040;
-    position: fixed;
-    display: flex;
-    font-weight: 400;
-    justify-content: space-between;
-    z-index: 98;
     bottom: 25px;
     right: 30px;
-    font-size: 20px;
-    padding: 15px 20px;
+    z-index: 99;
+    position: fixed;
+    transform: translateY(-50%);
     border-radius: 30px;
-    box-shadow: 0 1px 15px rgba(32, 33, 36, 0.28);
+    display: inline-block;
+    color: #070706 !important;
+    background-color: #ffffff;
+    padding: 8px 20px 8px;
+    font-size: 14px;
+    font-weight: 500;
+    animation-name: tada;
+    animation-duration: 5s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
 }
 
 a.blantershow-chat svg {
