--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -64,6 +64,62 @@ Default CSS
 	border-radius: 50%;
 }
 
+.switch-box1 .switch {
+	position: relative;
+	display: inline-block;
+	width: 60px;
+	height: 34px;
+}
+.switch-box1 .switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+.switch-box1 .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #2ad396;
+	transition: 0.4s;
+}
+.switch-box1 .slider:before {
+	position: absolute;
+	content: "";
+	height: 30px;
+	width: 30px;
+	left: 2.5px;
+	bottom: 4px;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+	transition: 0.4s;
+	box-shadow: 0 0px 15px rgba(32, 32, 32, 0.2392156863);
+	background: white url("https://i.ibb.co/FxzBYR9/night.png");
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.switch-box1 input:checked + .slider {
+	background-color: #2ad396;
+}
+.switch-box1 input:focus + .slider {
+	box-shadow: 0 0 1px #2ad396;
+}
+.switch-box1 input:checked + .slider:before {
+	transform: translateX(24px);
+	background: white url("https://i.ibb.co/7JfqXxB/sunny.png");
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.switch-box1 .slider.round {
+	border-radius: 50px;
+}
+.switch-box1 .slider.round:before {
+	border-radius: 50%;
+}
+
 .theme-light .black-logo {
 	display: block;
 }
@@ -132,8 +188,17 @@ Default CSS
 .theme-dark h6 a:hover {
 	color: #2ad396 !important;
 }
-.theme-dark .main-navbar {
-	background-color: #0e0e0e;
+ .main-navbar {
+	background-color: #0e0e0e !important;
+}
+.theme-dark .navbar-inner {
+    background: #000000;
+}
+.theme-dark .call-icon{
+	color: #2ad396 !important;
+}
+.theme-dark .box-icon{
+	color: #2ad396 !important;
 }
 .theme-dark .main-navbar .navbar .navbar-nav .nav-item a {
 	color: #ffffff !important;
