--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4085,7 +4085,7 @@ Team Area CSS
 }
 .team-card img {
 	position: relative;
-	margin-bottom: 120px;
+	margin-bottom: 8rem;
 	border-radius: 5px 5px 0 0;
 }
 .team-card .content {
